# throne-trader

./: .gitignore  .pre-commit-config.yaml  DL_ALGORITHMS.md  MANIFEST.in  README.md  gen_docs.sh  pyproject.toml  release_notes.rst  requirements.txt  trader.py
.github/workflows/: python-publish.yml
DL_algorithms/: lstm_model.py
docs/: README.html  README.md  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/: README.md.txt  index.rst.txt
docs_gen/: conf.py  index.rst
helper/: squire.py
markdown/: DL_ALGORITHMS.md  REALTIME.md  STRATEGIES.md
notebook/: gradient_boosting.ipynb  gru.ipynb  linear_regression.ipynb  lstm.ipynb
predictions/: README.md  __init__.py  gradient_boosting.py  linear_regression.py  lstm_future.py  lstm_model.py  squire.py
realtime/: __init__.py  financial.py  insider.py  volume.py
strategies/: __init__.py  bollinger_bands.py  breakout.py  crossover.py  macd.py  rsi.py  squire.py
tests/: test_functionalities.py  test_insider.py
thronetrader/: __init__.py  requirements.txt  trader.py
thronetrader/DL_algorithms/: gru_future.py  gru_model.py  lstm_future.py  lstm_model.py  steward.py
thronetrader/ML_algorithms/: gradient_boosting.py  linear_regression.py
thronetrader/helper/: logger.py  squire.py  wrapper.py
thronetrader/predictions/: gradient_boosting.py  linear_regression.py
thronetrader/realtime/: financial.py  insider.py  volume.py
thronetrader/strategies/: README.md  bollinger_bands.py  breakout.py  crossover.py  macd.py  rsi.py
thronetrader/tests/: insider.py
